address review suggestions